# Timple

./: .buildinfo  .gitignore  LICENSE.rst  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pytest.ini  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  timedelta.html  timple.html  troubleshooting.html
.doctrees/: environment.pickle  index.doctree  timedelta.doctree  timple.doctree  troubleshooting.doctree
.github/workflows/: release.yml  test_on_mpl_release.yml  tests.yml
_modules/: index.html
_modules/matplotlib/: ticker.html  units.html
_modules/timple/: core.html  timedelta.html
_sources/: index.rst.txt  timedelta.rst.txt  troubleshooting.rst.txt
_static/: documentation_options.js
docs/: conf.py  timedelta.rst  timple.rst
timple/: __init__.py  core.py  patches.py  timedelta.py
timple/tests/: conftest.py  test_new_mpl_releases.sh  test_patch.py  test_timple.py
