[metadata]
name = timple
version = 0.1.2
license = MIT
license_files = LICENSE.rst
author = Oehrly
author_email = oehrly@mailbox.org
home-page = https://github.com/theOehrly/Timple
description = Extended functionality for plotting timedelta-like values with Matplotlib
long-description = file: README.md
long_description_content_type = text/markdown


[options]
zip_safe = False
packages = timple
python_requires = >= 3.*
install_requires =
  numpy
  matplotlib


[build_sphinx]
project = Timple
copyright = 2021, theOehrly
version = 0.1.2
release = 0.1.2
source-dir = ./docs
build-dir = ./docs/_build

[flake8]
max-line-length = 79