[metadata]
name = timple
version = 0.1.6
; need to set correct version in sphinx conf.py as well
license = MIT
license_files = LICENSE.rst
author = Oehrly
author_email = oehrly@mailbox.org
home_page = https://github.com/theOehrly/Timple
description = Extended functionality for plotting timedelta-like values with Matplotlib
long_description = file: README.md
long_description_content_type = text/markdown


[options]
zip_safe = False
packages = timple
python_requires = >= 3.7
install_requires =
  numpy
  matplotlib

[flake8]
max-line-length = 79
